ini account page

--- a/web/accounts.html
+++ b/web/accounts.html
@@ -11,7 +11,18 @@
     <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
 </head>
 
-<body>
+<body style="color: var(--bs-dark);background: var(--bs-primary);">
+    <div style="color: var(--bs-gray-100);background: var(--bs-yellow);">
+        <h1 style="text-align: right;color: var(--bs-dark);margin: 0px;padding: 12px;">Welcome Admin</h1>
+    </div>
+    <div class="container" style="padding: 23px;">
+        <div class="row">
+            <div class="col-md-4" style="background: var(--bs-primary);"></div>
+            <div class="col-md-4"></div>
+            <div class="col-md-4"></div>
+        </div>
+    </div>
+    <div style="background: var(--bs-blue);color: var(--bs-blue);"></div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/stylish-portfolio.js"></script>
 </body>
