--- a/web/accounts.html
+++ b/web/accounts.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
+    <link rel="stylesheet" href="assets/css/Team-Boxed.css">
 </head>
 
 <body style="color: var(--bs-dark);background: var(--bs-primary);">
@@ -17,9 +18,37 @@
     </div>
     <div class="container" style="padding: 23px;">
         <div class="row">
-            <div class="col-md-4" style="background: var(--bs-primary);"></div>
-            <div class="col-md-4"></div>
-            <div class="col-md-4"></div>
+            <div class="col">
+                <div>
+                    <hr><a href="#" style="color: var(--bs-gray-100);">Savings Accounts &gt;</a>
+                    <hr><a href="#" style="color: var(--bs-gray-100);">Fixes Deposits &gt;</a>
+                    <hr><a href="#" style="color: var(--bs-gray-100);">Loans &gt;</a>
+                    <hr><a href="#" style="color: var(--bs-gray-100);">Statements &gt;</a>
+                    <hr><a href="#" style="color: var(--bs-gray-100);">Bank Products &gt;</a>
+                </div>
+            </div>
+            <div class="col-md-4" style="background: var(--bs-primary);">
+                <div>
+                    <div style="color: var(--bs-pink);background: var(--bs-pink);width: 262.656px;height: 152px;padding: 6px;margin: 13px;box-shadow: 0px 0px 20px var(--bs-body-color);"><label class="form-label" style="color: var(--bs-gray-900);text-align: right;font-weight: bold;margin-left: 195px;">Card 01</label>
+                        <h1 style="color: var(--bs-gray-100);font-size: 26px;height: auto;width: auto;margin-top: 0px;margin-right: 0px;text-align: center;box-shadow: 0px 0px;">4220 1254 1254 4851</h1>
+                        <h1 style="color: var(--bs-gray-100);font-size: 22px;height: auto;width: auto;margin-top: 24px;text-align: left;box-shadow: 0px 0px;margin-left: 8px;margin-bottom: 14px;">Admin User</h1>
+                        <h1 style="color: var(--bs-gray-100);font-size: 19px;height: auto;width: auto;margin-top: -14px;margin-right: 0px;text-align: left;box-shadow: 0px 0px;margin-left: 8px;">01/22&nbsp; &nbsp; &nbsp;</h1>
+                    </div>
+                    <div style="color: var(--bs-orange);background: var(--bs-orange);width: 262.656px;height: 152px;padding: 6px;margin: 13px;box-shadow: 0px 0px 20px var(--bs-body-color);"><label class="form-label" style="color: var(--bs-gray-900);text-align: right;font-weight: bold;margin-left: 195px;">Card 02</label>
+                        <h1 style="color: var(--bs-gray-100);font-size: 26px;height: auto;width: auto;margin-top: 0px;margin-right: 0px;text-align: center;box-shadow: 0px 0px;">5125 5485 5841 1255</h1>
+                        <h1 style="color: var(--bs-gray-100);font-size: 22px;height: auto;width: auto;margin-top: 24px;text-align: left;box-shadow: 0px 0px;margin-left: 8px;margin-bottom: 14px;">Admin User</h1>
+                        <h1 style="color: var(--bs-gray-100);font-size: 19px;height: auto;width: auto;margin-top: -14px;margin-right: 0px;text-align: left;box-shadow: 0px 0px;margin-left: 8px;">04/25&nbsp; &nbsp; &nbsp;</h1>
+                    </div>
+                    <div style="color: var(--bs-pink);background: var(--bs-green);width: 262.656px;height: 152px;padding: 6px;margin: 13px;box-shadow: 0px 0px 6px var(--bs-body-color);"><label class="form-label" style="color: var(--bs-gray-900);text-align: right;font-weight: bold;margin-left: 195px;">Card 03</label>
+                        <h1 style="color: var(--bs-gray-100);font-size: 26px;height: auto;width: auto;margin-top: 0px;margin-right: 0px;text-align: center;box-shadow: 0px 0px;">1234 5678 9101 1121</h1>
+                        <h1 style="color: var(--bs-gray-100);font-size: 22px;height: auto;width: auto;margin-top: 24px;text-align: left;box-shadow: 0px 0px;margin-left: 8px;margin-bottom: 14px;">Admin User</h1>
+                        <h1 style="color: var(--bs-gray-100);font-size: 19px;height: auto;width: auto;margin-top: -14px;margin-right: 0px;text-align: left;box-shadow: 0px 0px;margin-left: 8px;">11/12&nbsp; &nbsp; &nbsp;</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4" style="width: 410.656px;">
+                <div></div>
+            </div>
         </div>
     </div>
     <div style="background: var(--bs-blue);color: var(--bs-blue);"></div>
