add login button

--- a/web/login.html
+++ b/web/login.html
@@ -40,7 +40,7 @@
                     </tr>
                 </tbody>
             </table>
-        </div>
+        </div><button class="btn btn-primary" type="button" style="color: rgb(0,0,0);background: rgb(227,206,21);font-size: 20px;width: 128.2656px;">Login</button>
     </section>
     <footer class="footer text-center" style="height: auto;margin: auto;width: auto;padding: auto;">
         <div class="container">
