modified the page

--- a/web/accounts.html
+++ b/web/accounts.html
@@ -48,6 +48,51 @@
             </div>
             <div class="col-md-4" style="width: 410.656px;">
                 <div></div>
+                <h1 style="text-align: right;font-size: 58px;color: var(--bs-white);margin-top: 41px;">1,000,254.00</h1>
+                <hr>
+                <div class="table-responsive" style="color: rgb(251,251,251);margin: -13px;padding: 0px;margin-top: 26px;">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th></th>
+                                <th style="text-align: center;">Date</th>
+                                <th style="text-align: right;">Amount</th>
+                            </tr>
+                        </thead>
+                        <tbody style="color: rgb(255,255,255);">
+                            <tr>
+                                <td>Telephone Bill&nbsp;</td>
+                                <td style="text-align: center;">21-Sept-05</td>
+                                <td style="text-align: right;">(5000.00)</td>
+                            </tr>
+                            <tr>
+                                <td>Top-up</td>
+                                <td style="text-align: center;">21-Sept-05</td>
+                                <td style="text-align: right;">155000.00</td>
+                            </tr>
+                            <tr>
+                                <td>Tax</td>
+                                <td style="text-align: center;">21-Sept-10</td>
+                                <td style="text-align: right;">(9000.00)</td>
+                            </tr>
+                            <tr>
+                                <td>Water Bill&nbsp;</td>
+                                <td style="text-align: center;">21-Sept-12</td>
+                                <td style="text-align: right;">(1500.00)</td>
+                            </tr>
+                            <tr>
+                                <td>Wage</td>
+                                <td style="text-align: center;">21-Sept-15</td>
+                                <td style="text-align: right;">25000.00</td>
+                            </tr>
+                            <tr>
+                                <td>Income</td>
+                                <td style="text-align: center;">21-Sept-22</td>
+                                <td style="text-align: right;">15000.00</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
