--- a/web/accounts.html
+++ b/web/accounts.html
@@ -18,7 +18,7 @@
     </div>
     <div class="container" style="padding: 23px;">
         <div class="row">
-            <div class="col">
+            <div class="col" style="margin-right: 93px;">
                 <div>
                     <hr><a href="#" style="color: var(--bs-gray-100);">Savings Accounts &gt;</a>
                     <hr><a href="#" style="color: var(--bs-gray-100);">Fixes Deposits &gt;</a>
