--- a/web/index.html
+++ b/web/index.html
@@ -1,20 +1,130 @@
 <!DOCTYPE html>
-
 <html>
+
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="scaffolded-by" content="https://github.com/dart-lang/stagehand">
-    <title>TPP_APP</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Webpage</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
+    <link rel="stylesheet" href="assets/css/Team-Boxed.css">
     <script defer src="main.dart.js"></script>
+    <style>
+      .redCard {
+        background: var(--bs-pink);
+        width: 262.656px;
+        height: 152px;
+        padding: 6px;
+        margin: 13px;
+        box-shadow: 0px 0px 20px var(--bs-body-color);
+      }
+
+      .card-form-label {
+        color: var(--bs-gray-900);text-align: right;font-weight: bold;margin-left: 195px;
+      }
+      .card-h1-cardNo {
+        color: var(--bs-gray-100);font-size: 26px;height: auto;width: auto;margin-top: 0px;margin-right: 0px;text-align: center;box-shadow: 0px 0px;
+      }
+      .card-h1-user {
+        color: var(--bs-gray-100);font-size: 26px;height: auto;width: auto;margin-top: 0px;margin-right: 0px;text-align: center;box-shadow: 0px 0px;
+      }
+      .card-h1-expDate {
+        color: var(--bs-gray-100);font-size: 26px;height: auto;width: auto;margin-top: 0px;margin-right: 0px;text-align: center;box-shadow: 0px 0px;
+      }
+
+    </style>
 </head>
 
-<body>
-
-  <div id="output"></div>
-
+<body style="color: var(--bs-dark);background: var(--bs-primary);">
+    <div style="color: var(--bs-gray-100);background: var(--bs-yellow);">
+        <h1 style="text-align: right;color: var(--bs-dark);margin: 0px;padding: 12px;">Welcome Admin</h1>
+    </div>
+    <div class="container" style="padding: 23px;">
+        <div class="row">
+            <div class="col" style="margin-right: 93px;">
+                <div>
+                    <hr><a href="#" style="color: var(--bs-gray-100);">Savings Accounts &gt;</a>
+                    <hr><a href="#" style="color: var(--bs-gray-100);">Fixes Deposits &gt;</a>
+                    <hr><a href="#" style="color: var(--bs-gray-100);">Loans &gt;</a>
+                    <hr><a href="#" style="color: var(--bs-gray-100);">Statements &gt;</a>
+                    <hr><a href="#" style="color: var(--bs-gray-100);">Bank Products &gt;</a>
+                </div>
+            </div>
+            <div class="col-md-4" style="background: var(--bs-primary);">
+                <div id="output">
+                    <!-- <div style="color: var(--bs-pink);background: var(--bs-pink);width: 262.656px;height: 152px;padding: 6px;margin: 13px;box-shadow: 0px 0px 20px var(--bs-body-color);"><label class="form-label" style="color: var(--bs-gray-900);text-align: right;font-weight: bold;margin-left: 195px;">Card 01</label>
+                      <h1 style="color: var(--bs-gray-100);font-size: 26px;height: auto;width: auto;margin-top: 0px;margin-right: 0px;text-align: center;box-shadow: 0px 0px;">4220 1254 1254 4851</h1>
+                      <h1 style="color: var(--bs-gray-100);font-size: 22px;height: auto;width: auto;margin-top: 24px;text-align: left;box-shadow: 0px 0px;margin-left: 8px;margin-bottom: 14px;">Admin User</h1>
+                      <h1 style="color: var(--bs-gray-100);font-size: 19px;height: auto;width: auto;margin-top: -14px;margin-right: 0px;text-align: left;box-shadow: 0px 0px;margin-left: 8px;">01/22&nbsp; &nbsp; &nbsp;</h1>
+                  </div>
+                  <div style="color: var(--bs-orange);background: var(--bs-orange);width: 262.656px;height: 152px;padding: 6px;margin: 13px;box-shadow: 0px 0px 20px var(--bs-body-color);"><label class="form-label" style="color: var(--bs-gray-900);text-align: right;font-weight: bold;margin-left: 195px;">Card 02</label>
+                      <h1 style="color: var(--bs-gray-100);font-size: 26px;height: auto;width: auto;margin-top: 0px;margin-right: 0px;text-align: center;box-shadow: 0px 0px;">5125 5485 5841 1255</h1>
+                      <h1 style="color: var(--bs-gray-100);font-size: 22px;height: auto;width: auto;margin-top: 24px;text-align: left;box-shadow: 0px 0px;margin-left: 8px;margin-bottom: 14px;">Admin User</h1>
+                      <h1 style="color: var(--bs-gray-100);font-size: 19px;height: auto;width: auto;margin-top: -14px;margin-right: 0px;text-align: left;box-shadow: 0px 0px;margin-left: 8px;">04/25&nbsp; &nbsp; &nbsp;</h1>
+                  </div>
+                  <div style="color: var(--bs-pink);background: var(--bs-green);width: 262.656px;height: 152px;padding: 6px;margin: 13px;box-shadow: 0px 0px 6px var(--bs-body-color);"><label class="form-label" style="color: var(--bs-gray-900);text-align: right;font-weight: bold;margin-left: 195px;">Card 03</label>
+                      <h1 style="color: var(--bs-gray-100);font-size: 26px;height: auto;width: auto;margin-top: 0px;margin-right: 0px;text-align: center;box-shadow: 0px 0px;">1234 5678 9101 1121</h1>
+                      <h1 style="color: var(--bs-gray-100);font-size: 22px;height: auto;width: auto;margin-top: 24px;text-align: left;box-shadow: 0px 0px;margin-left: 8px;margin-bottom: 14px;">Admin User</h1>
+                      <h1 style="color: var(--bs-gray-100);font-size: 19px;height: auto;width: auto;margin-top: -14px;margin-right: 0px;text-align: left;box-shadow: 0px 0px;margin-left: 8px;">11/12&nbsp; &nbsp; &nbsp;</h1> -->
+                  </div>
+                </div>
+            </div>
+            <div class="col-md-4" style="width: 410.656px;">
+                <div></div>
+                <h1 style="text-align: right;font-size: 58px;color: var(--bs-white);margin-top: 41px;">1,000,254.00</h1>
+                <hr>
+                <div class="table-responsive" style="color: rgb(251,251,251);margin: -13px;padding: 0px;margin-top: 26px;">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th></th>
+                                <th style="text-align: center;">Date</th>
+                                <th style="text-align: right;">Amount</th>
+                            </tr>
+                        </thead>
+                        <tbody style="color: rgb(255,255,255);">
+                            <tr>
+                                <td>Telephone Bill&nbsp;</td>
+                                <td style="text-align: center;">21-Sept-05</td>
+                                <td style="text-align: right;">(5000.00)</td>
+                            </tr>
+                            <tr>
+                                <td>Top-up</td>
+                                <td style="text-align: center;">21-Sept-05</td>
+                                <td style="text-align: right;">155000.00</td>
+                            </tr>
+                            <tr>
+                                <td>Tax</td>
+                                <td style="text-align: center;">21-Sept-10</td>
+                                <td style="text-align: right;">(9000.00)</td>
+                            </tr>
+                            <tr>
+                                <td>Water Bill&nbsp;</td>
+                                <td style="text-align: center;">21-Sept-12</td>
+                                <td style="text-align: right;">(1500.00)</td>
+                            </tr>
+                            <tr>
+                                <td>Wage</td>
+                                <td style="text-align: center;">21-Sept-15</td>
+                                <td style="text-align: right;">25000.00</td>
+                            </tr>
+                            <tr>
+                                <td>Income</td>
+                                <td style="text-align: center;">21-Sept-22</td>
+                                <td style="text-align: right;">15000.00</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div style="background: var(--bs-blue);color: var(--bs-blue);"></div>
+    <p class="mb-0 small" style="text-align: center;color: rgb(255,255,255);">Copyright &nbsp;© TPP-APP 2021</p>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/stylish-portfolio.js"></script>
 </body>
+
 </html>
