--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="assets/css/Team-Boxed.css">
     <script defer src="main.dart.js"></script>
     <style>
-      .redCard {
+      .card {
         background: var(--bs-pink);
         width: 262.656px;
         height: 152px;
@@ -28,10 +28,10 @@
         color: var(--bs-gray-100);font-size: 26px;height: auto;width: auto;margin-top: 0px;margin-right: 0px;text-align: center;box-shadow: 0px 0px;
       }
       .card-h1-user {
-        color: var(--bs-gray-100);font-size: 26px;height: auto;width: auto;margin-top: 0px;margin-right: 0px;text-align: center;box-shadow: 0px 0px;
+        color: var(--bs-gray-100);font-size: 22px;height: auto;width: auto;margin-top: 24px;text-align: left;box-shadow: 0px 0px;margin-left: 8px;margin-bottom: 14px;
       }
       .card-h1-expDate {
-        color: var(--bs-gray-100);font-size: 26px;height: auto;width: auto;margin-top: 0px;margin-right: 0px;text-align: center;box-shadow: 0px 0px;
+        color: var(--bs-gray-100);font-size: 19px;height: auto;width: auto;margin-top: -14px;margin-right: 0px;text-align: left;box-shadow: 0px 0px;margin-left: 8px;
       }
 
     </style>
