--- a/web/index.html
+++ b/web/index.html
@@ -21,6 +21,18 @@
         box-shadow: 0px 0px 20px var(--bs-body-color);
       }
 
+      .pink {
+        background: var(--bs-pink);
+      }
+
+      .orange {
+        background: var(--bs-orange);
+      }
+
+      .green {
+        background: var(--bs-green);
+      }
+
       .card-form-label {
         color: var(--bs-gray-900);text-align: right;font-weight: bold;margin-left: 195px;
       }
