modified for transactions

--- a/web/index.html
+++ b/web/index.html
@@ -87,8 +87,8 @@
                 <div></div>
                 <h1 style="text-align: right;font-size: 58px;color: var(--bs-white);margin-top: 41px;">1,000,254.00</h1>
                 <hr>
-                <div class="table-responsive" style="color: rgb(251,251,251);margin: -13px;padding: 0px;margin-top: 26px;">
-                    <table class="table">
+                <div id="output2" class="table-responsive" style="color: rgb(251,251,251);margin: -13px;padding: 0px;margin-top: 26px;">
+                    <!-- <table class="table">
                         <thead>
                             <tr>
                                 <th></th>
@@ -128,7 +128,7 @@
                                 <td style="text-align: right;">15000.00</td>
                             </tr>
                         </tbody>
-                    </table>
+                    </table> -->
                 </div>
             </div>
         </div>
