update the page

--- a/web/index.html
+++ b/web/index.html
@@ -97,7 +97,7 @@
             </div>
             <div class="col-md-5" style="width: 410.656px;">
                 <div></div>
-                <h1 style="text-align: right;font-size: 58px;color: var(--bs-white);margin-top: 41px;">1,000,254.00</h1>
+                <h1 id="balance" style="text-align: right;font-size: 58px;color: var(--bs-white);margin-top: 41px;">1,000,254.00</h1>
                 <hr>
                 <div id="output2" class="table-responsive" style="color: rgb(251,251,251);margin: -13px;padding: 0px;margin-top: 26px;">
                 </div>
