userName set with Json response

--- a/web/index.html
+++ b/web/index.html
@@ -63,7 +63,7 @@
 
 <body style="color: var(--bs-dark);background: var(--bs-primary);">
     <div style="color: var(--bs-gray-100);background: var(--bs-yellow);">
-        <h1 id="userName" style="text-align: right;color: var(--bs-dark);margin: 0px;padding: 12px;">Welcome Admin</h1>
+        <h1 id="userName" style="text-align: right;color: var(--bs-dark);margin: 0px;padding: 12px;"></h1>
     </div>
     <div class="container">
         <div class="row">
